CD-eks/nginx-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-exporter-service
  namespace: web
spec:
  selector:
    app: nginx-exporter
  ports:
    - protocol: TCP
      port: 9113
      targetPort: 9113
  type: ClusterIP  # 필요시 LoadBalancer로 변경 가능
