CD-eks/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: streamlit
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
